fixed proto crud functions working
