# internal/gen/messaging/v1/messaging.pb.validate.go
@@ -452,9 +452,7 @@ func (m *QueryResponse) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for TotalCount
-
-	for idx, item := range m.GetMessageThreads() {
+	for idx, item := range m.GetCursor() {
 		_, _ = idx, item
 
 		if all {
@@ -462,7 +460,7 @@ func (m *QueryResponse) validate(all bool) error {
 			case interface{ ValidateAll() error }:
 				if err := v.ValidateAll(); err != nil {
 					errors = append(errors, QueryResponseValidationError{
-						field:  fmt.Sprintf("MessageThreads[%v]", idx),
+						field:  fmt.Sprintf("Cursor[%v]", idx),
 						reason: "embedded message failed validation",
 						cause:  err,
 					})
@@ -470,7 +468,7 @@ func (m *QueryResponse) validate(all bool) error {
 			case interface{ Validate() error }:
 				if err := v.Validate(); err != nil {
 					errors = append(errors, QueryResponseValidationError{
-						field:  fmt.Sprintf("MessageThreads[%v]", idx),
+						field:  fmt.Sprintf("Cursor[%v]", idx),
 						reason: "embedded message failed validation",
 						cause:  err,
 					})
@@ -479,7 +477,7 @@ func (m *QueryResponse) validate(all bool) error {
 		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
 			if err := v.Validate(); err != nil {
 				return QueryResponseValidationError{
-					field:  fmt.Sprintf("MessageThreads[%v]", idx),
+					field:  fmt.Sprintf("Cursor[%v]", idx),
 					reason: "embedded message failed validation",
 					cause:  err,
 				}
@@ -487,6 +485,8 @@ func (m *QueryResponse) validate(all bool) error {
 		}
 
 	}
+
+	// no validation rules for Matches
 
 	if len(errors) > 0 {
 		return QueryResponseMultiError(errors)
